--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "pcomp",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "main": "index.js",
   "repository": "git@github.com:hjfitz/plantuml-compiler.git",
   "author": "Harry F <harry.f@elanco.com>",
   "keywords": ["puml", "plantuml", "compiler", "uml", "diagram"],
   "license": "MIT",
+  "bin": {
+    "pcomp": "index.js"
+  },
   "dependencies": {
     "debug": "^4.1.1",
     "plantuml-encoder": "^1.4.0",
